      - Functions returning version information Note this change limits future
        version numbers to numeric components.
  - Documentation
    - The color scheme org-mode document has been cleaned up
    - Added change log (this very file!)
    - Updated README.org to reflect change log and remove comments about very
      old versions
  - Examples
    - New
      - barrymartin.cpp -- Barry Martin attractors
      - tinkerbell.cpp -- Tinkerbell attractors
      - tinkerbell_search.cpp -- Search for interesting Tinkerbell parameters
    - Updated
      - N/A
  - Miscellaneous
    - N/A
* v20.12.3: Feature Release
:PROPERTIES:
:CUSTOM_ID: v20.12.3
:END:
  - Examples
    - New
      - newton_roter
      - newton_3updown
      - newton_min_angle
      - mandelbrot_count_movie
      - laguerre_3updown.cpp
      - laguerre_simple.cpp
    - Updated
      - mandelbrot_simple: Now uses OpenMP
  - API breaking Changes
    - The ramCanvas constructors now throw.
      The cases where they throw would have likely caused a runtime issue later
      anyhow, so I don't expect very many people to notice this one...
    - The configure.sh script must now be run from the build directory.
      It is also much smarter about finding a good compiler.
  - New functionality
    - Numerous documentation updates & fixes
    - unitTooIntLinMap: template version now handles large integers
    - 2D color maps
      - csSet(): Added two argument version
      - cs2dIdxPalArg: Create an argument color scheme from an indexed color scheme
      - cs2dFltPalArg: Create an argument color scheme from a continuous color scheme
      - cs2dRichardson: Richardson's 2D complex number coloring scheme.
      - cs2dThaller_tpl: Meta class for Bernd Thaller's 2D complex number color methods
        - cs2dThallerHSL: Thaller method using HSL
        - cs2dThallerHSVm: Thaller method using HSV with maximal V value
        - cs2dThallerHSV: Thaller method using HSV with dynamic V value